<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_novo_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.logonrm.democadastro.NovoUsuarioActivity">
    <EditText
        style="@style/inputs"
        android:hint="@string/informe_o_username"
        android:id="@+id/etUsernameL"/>

    <EditText
        style="@style/inputs_senha"
        android:hint="@string/informe_seu_nome"
        android:id="@+id/etName"/>

    <EditText
        style="@style/inputs_senha"
        android:hint="@string/informe_senha"
        android:id="@+id/etSenha"/>

    <Button
        style="@style/button"
        android:text="@string/btcriar"
        android:id="@+id/btCriar"
        />


</LinearLayout>
