<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.logonrm.democadastro.LoginActivity">


    <EditText
        style="@style/inputs"
        android:hint="@string/informe_o_username"
        android:id="@+id/etUsername"/>

    <EditText
        style="@style/inputs_senha"
        android:hint="@string/informe_senha"
        android:id="@+id/etSenha"/>

    <Button
        style="@style/button"
        android:text="@string/btconectar"
        android:id="@+id/btConectar"
        />

    <TextView
        style="@style/inputs"
        android:text="@string/sou_novo_usuario"
        android:id="@+id/tvNovoUsuario"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="16dp"
        android:textColor="@drawable/link"
        />

</LinearLayout>
